@@ -1,3 +1,7 @@
+2018-10-10  Charlie Zender  <zender@uci.edu>
+
+	* Finish O3 support for HITRAN .xsc files, add CFC11 support
+
 2018-10-09  Charlie Zender  <zender@uci.edu>
 
 	* Add most functionality needed to support HITRAN .xsc files
